# diagnosis

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  working.md
app/: __init__.py  main.py
app/agents/: __init__.py
app/analytics/: __init__.py  data_type_detector.py  dataframe_provider.py  profiler.py  statistics_collector.py
app/api/: health.py
app/core/: config.py  exceptions.py  logging.py
app/dashboard/: __init__.py
app/database/: __init__.py
app/dependencies/: services.py  storage.py
app/gemini/: __init__.py  retry.py
app/middleware/: errors.py  logging.py
app/models/: __init__.py
app/reporting/: __init__.py
app/repositories/: __init__.py  conversation_repository.py  dashboard_repository.py  insight_repository.py  plan_repository.py  profile_repository.py  result_repository.py  semantic_repository.py  visualization_repository.py
app/schemas/: conversation.py  dashboard.py  dataset.py  insight.py  plan.py  profile.py  results.py  semantic.py  visualization.py
app/semantic/: __init__.py  builder.py  dictionary.py  knowledge_base.py  relationship.py  validation.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: setup_dev.py
tests/: __init__.py  test_analytics.py  test_chat_router.py  test_config.py  test_dashboard.py  test_health.py  test_insights.py  test_plan.py  test_profile.py  test_semantic.py  test_upload.py  test_visualization.py
(+91 files in other folders)
