[tool.poetry]
name = "diagnosis"
version = "0.1.0"
description = "Diagnōsis - AI-powered Healthcare Analytics and Decision Support Platform"
authors = ["Diagnosis Dev Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.4.0"
uvicorn = {extras = ["standard"], version = ">=0.30.1"}
python-multipart = ">=0.0.9"
chardet = ">=5.2.0"
aiofiles = ">=23.2.1"
pandas = "^2.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
